renamed ModifyProject to ModifyModule
moved the getInstance() methods from Module to the service
and other changes to use ModuleEntity where possible.

and added some ui resources

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/Links.vm
+++ b/src/templates/screens/Links.vm
@@ -37,6 +37,9 @@ Working:
     <a href="$link.setPage("admin,ModuleAttributeEditor.vm")">
         admin,ModuleAttributeEditor.vm</a>
 </li>
+<li>
+    <a href="$link.setPage("FluxIndex.vm")">Flux</a>
+</li>
 </ul>
 
 <p>
