--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -87,3 +87,11 @@
    <input type="hidden" name="$booleanField.ValueIfAbsent"
         value="false">
 #end
+
+#macro ( textField $field $size )
+    #if ( $field.Validator.MaxLength && $field.Validator.MaxLength > 0 )
+        #set ( $maxLength = $field.Validator.MaxLength )
+    #end
+
+    <input type="text" name="$field.Key" value="$!field.Value"#if($maxLength) maxlength="$maxLength"#end#if($size.length()) size="$size"#end>
+#end
