--- a/src/templates/screens/Confirm.vm
+++ b/src/templates/screens/Confirm.vm
@@ -49,10 +49,14 @@ $page.setTitle("Confirm Your Email Address")
 
 <form method="post" action="$link.setPage("Confirm.vm")">
     <input type="hidden" name="action" value="Confirm">
-    <input type="hidden" name="cancelTemplate" value="Login.vm">
-    <input type="hidden" name="nextTemplate" value="Start.vm">
+    <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="Login.vm">
+    <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="Start.vm">
 
 #set ($user = $scarabR.User)
+#set ($email = $data.Parameters.Email)
+#if ($email.length() > 0)
+    $user.setEmail($email)
+#end
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
  <tr>
@@ -73,7 +77,7 @@ $page.setTitle("Confirm Your Email Address")
  </tr>
  <tr>
   <td nowrap class="InputHeader">Confirmation Code:</td>
-  <td><input type="text" size="25" name="Confirmed" value="$!data.getParameters().getString("Confirmed")"></td>
+  <td><input type="text" size="25" name="Confirm" value="$!data.Parameters.Confirm"></td>
  </tr>
  <tr>
   <td height="4" colspan="2"><spacer type="block" height="4"></td>
