--- a/src/templates/layouts/admin/default.vm
+++ b/src/templates/layouts/admin/default.vm
@@ -1,79 +1,19 @@
+<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
+    "http://collabnet.com/dtds/collabnet_transitional_10.dtd">
+
+<html>
+ <head>
+  <title>$page.Title</title>
+  <link rel="stylesheet" type="text/css" href="/scarab/main0.css"/>
+ </head>
+
+<body>
+
 $navigation.setTemplate("/ScarabTop.vm")
-
-#*
-
-$page.setBgColor("#7C869C")
-
-<table border="0" bgcolor="#BBBBBB" cellpadding="0" cellspacing="0" width="100%">
-    <tr>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-    </tr>
-    <tr align="left">
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<a href="/">My Issues</a>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<A HREF="/">Report</A>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<A HREF="/">Browse</A>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<A HREF="/">Assign (8)</A>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<A HREF="/">Search</A>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<A HREF="/">Search</A>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#FFFFFF" height="18" align="middle">&nbsp;&nbsp;<A HREF="$link.setPage("admin,AdminHome.vm")" class="StressedText">Admin</A>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<A HREF="/">Help</A>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<A HREF="/">Prefs</A>&nbsp;&nbsp;</td>
-        <td bgcolor="#000000" height="18"><spacer type="block" height="18" width="1"></td>
-        <td bgcolor="#BBBBBB" height="18" class="NavHeader" align="middle" nowrap>&nbsp;&nbsp;<A HREF="$link.setPage("Login.vm").setAction("Logout")">Log Out</A>&nbsp;&nbsp;</td>
-    </tr>
-    <tr>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-        <td bgcolor="#000000"><img src="/scarab/images/spacer.gif" width="1" height="1" alt="" border="0"></td>
-    </tr>
-</table>
-*#
 
 $screen_placeholder
 
 $navigation.setTemplate("/ScarabBottom.vm")
+
+</body>
+</html>
