added some fields to attribute to support the additional UI columns display some of the new columns on the page add functional area to default project

--- a/src/templates/screens/admin/AttributeShow.vm
+++ b/src/templates/screens/admin/AttributeShow.vm
@@ -58,9 +58,9 @@ This page is for editing the Attributes which are defined globally.
       #end
     #end
 </td>
-<td>descr. X</td>
+<td>#if ($attribute.Description) $attribute.Description #else &nbsp; #end</td>
 <td>x (x@xxx.com)</td>
-<td>xx/xx/2001</td>
+<td>$attribute.CreatedDate</td>
 <td><a href="#">copy</a></td>
 </tr>
 #end
