added more "skinning" to the UI...
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/layouts/admin/default.vm
+++ b/src/templates/layouts/admin/default.vm
@@ -8,10 +8,57 @@
  </head>
 
 <body>
+   <table border="0" cellspacing="0" cellpadding="0" width="100%">
+    <tr>
+     <!-- Top -->
 
-$navigation.setTemplate("/ScarabTop.vm")
+     <td id="globalnav" colspan="2"><a href="#">globalfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a> </td>
+     <!-- Top -->
+    </tr>
+
+    <tr>
+     <!-- Left -->
+
+     <td id="leftprojnav" width="100">
+      <a href="#">projectnav</a> 
+
+      <ul>
+       <li><a href="#">item1</a></li>
+
+       <li><a href="#">item2</a></li>
+      </ul>
+
+      <div class="leftprojnav">
+       <a href="http://collabnet.cleverchimp.com/dtds/validator.html" class="validate">validate me</a>
+      </div>
+     </td>
+     <!-- Left --><!-- Right -->
+
+     <td>
+      <div id="featurenav">
+       <table border="0" cellspacing="0" cellpadding="0" width="100%">
+        <tr>
+         <td width="65" rowspan="2"><img src="/scarab/images/bug.gif" width="55" height="43" alt="track this pal" border="0" /></td>
+
+         <td><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></td>
+        </tr>
+
+        <tr>
+         <td>
+          <div class="crumbing">
+           <a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2
+          </div>
+         </td>
+        </tr>
+       </table>
+      </div>
 
 $screen_placeholder
+
+    </td>
+    <!-- Right -->
+    </tr>
+   </table>
 
 $navigation.setTemplate("/ScarabBottom.vm")
 
